--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,9 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "ramsey/uuid": "^4.1",
         "robinvdvleuten/ulid": "^5.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "9"
     },
     "autoload": {
         "psr-4": {
@@ -33,5 +30,8 @@
             "type": "vcs",
             "url": "https://bitbucket.org/schooltwist/validations.git"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    }
 }
